--- a/backend/fixtures/api_client.html
+++ b/backend/fixtures/api_client.html
@@ -175,21 +175,25 @@ def k8s_version(request):
 @pytest.fixture(autouse=True)
 def skip_version_before(request, api_client):
     mark = request.node.get_closest_marker(&#34;skip_version_before&#34;)
-    if mark and parse_version(mark.args[0]) &gt; api_client.cluster_version:
-        pytest.skip(
-            f&#34;Cluster Version `{api_client.cluster_version}` is not included&#34;
-            f&#34; in the supported version (most &gt;= `{mark.args[0]}`)&#34;
-        )
+    if mark:
+        cluster_ver = api_client.cluster_version
+        if &#39;-head&#39; not in cluster_ver.public and parse_version(mark.args[0]) &gt; cluster_ver:
+            pytest.skip(
+                f&#34;Cluster Version `{api_client.cluster_version}` is not included&#34;
+                f&#34; in the supported version (most &gt;= `{mark.args[0]}`)&#34;
+            )
 
 
 @pytest.fixture(autouse=True)
 def skip_version_after(request, api_client):
     mark = request.node.get_closest_marker(&#34;skip_version_after&#34;)
-    if mark and parse_version(mark.args[0]) &lt;= api_client.cluster_version:
-        pytest.skip(
-            f&#34;Cluster Version `{api_client.cluster_version}` is not included&#34;
-            f&#34; in the supported version (most &lt; `{mark.args[0]}`)&#34;
-        )
+    if mark:
+        cluster_ver = api_client.cluster_version
+        if not hasattr(cluster_ver, &#39;major&#39;) or parse_version(mark.args[0]) &lt;= cluster_ver:
+            pytest.skip(
+                f&#34;Cluster Version `{api_client.cluster_version}` is not included&#34;
+                f&#34; in the supported version (most &lt; `{mark.args[0]}`)&#34;
+            )
 
 
 @pytest.fixture(scope=&#34;session&#34;)
@@ -500,11 +504,13 @@ def k8s_version(request):
 <pre><code class="python">@pytest.fixture(autouse=True)
 def skip_version_after(request, api_client):
     mark = request.node.get_closest_marker(&#34;skip_version_after&#34;)
-    if mark and parse_version(mark.args[0]) &lt;= api_client.cluster_version:
-        pytest.skip(
-            f&#34;Cluster Version `{api_client.cluster_version}` is not included&#34;
-            f&#34; in the supported version (most &lt; `{mark.args[0]}`)&#34;
-        )</code></pre>
+    if mark:
+        cluster_ver = api_client.cluster_version
+        if not hasattr(cluster_ver, &#39;major&#39;) or parse_version(mark.args[0]) &lt;= cluster_ver:
+            pytest.skip(
+                f&#34;Cluster Version `{api_client.cluster_version}` is not included&#34;
+                f&#34; in the supported version (most &lt; `{mark.args[0]}`)&#34;
+            )</code></pre>
 </details>
 </dd>
 <dt id="harvester_e2e_tests.fixtures.api_client.skip_version_before"><code class="name flex">
@@ -519,11 +525,13 @@ def skip_version_after(request, api_client):
 <pre><code class="python">@pytest.fixture(autouse=True)
 def skip_version_before(request, api_client):
     mark = request.node.get_closest_marker(&#34;skip_version_before&#34;)
-    if mark and parse_version(mark.args[0]) &gt; api_client.cluster_version:
-        pytest.skip(
-            f&#34;Cluster Version `{api_client.cluster_version}` is not included&#34;
-            f&#34; in the supported version (most &gt;= `{mark.args[0]}`)&#34;
-        )</code></pre>
+    if mark:
+        cluster_ver = api_client.cluster_version
+        if &#39;-head&#39; not in cluster_ver.public and parse_version(mark.args[0]) &gt; cluster_ver:
+            pytest.skip(
+                f&#34;Cluster Version `{api_client.cluster_version}` is not included&#34;
+                f&#34; in the supported version (most &gt;= `{mark.args[0]}`)&#34;
+            )</code></pre>
 </details>
 </dd>
 <dt id="harvester_e2e_tests.fixtures.api_client.sleep_timeout"><code class="name flex">
