Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/fixtures/virtualmachines.html
+++ b/backend/fixtures/virtualmachines.html
@@ -66,8 +66,7 @@ def vm_shell():
                 else:
                     ch = None
 
-                if self.pkey:
-                    pkey = RSAKey.from_private_key(StringIO(self.pkey))
+                pkey = RSAKey.from_private_key(StringIO(self.pkey)) if self.pkey else None
 
                 cli = SSHClient()
                 cli.set_missing_host_key_policy(MissingHostKeyPolicy())
@@ -141,8 +140,7 @@ def vm_shell():
                 else:
                     ch = None
 
-                if self.pkey:
-                    pkey = RSAKey.from_private_key(StringIO(self.pkey))
+                pkey = RSAKey.from_private_key(StringIO(self.pkey)) if self.pkey else None
 
                 cli = SSHClient()
                 cli.set_missing_host_key_policy(MissingHostKeyPolicy())
