--- a/backend/conftest.html
+++ b/backend/conftest.html
@@ -229,6 +229,42 @@ def pytest_addoption(parser):
         default=config_data[&#39;nfs-mount-dir&#39;],
         help=(&#39;mount directory for nfs share&#39;)
     )
+    parser.addoption(
+        &#39;--upgrade-prepare-dependence&#39;,
+        action=&#39;store&#39;,
+        default=config_data[&#39;upgrade-prepare-dependence&#39;],
+        help=(&#39;If true to prepare dependence&#39;)
+    )
+    parser.addoption(
+        &#39;--upgrade-sc-replicas&#39;,
+        action=&#39;store&#39;,
+        default=config_data[&#39;upgrade-sc-replicas&#39;],
+        help=(&#39;default storage class replicas&#39;)
+    )
+    parser.addoption(
+        &#39;--upgrade-target-version&#39;,
+        action=&#39;store&#39;,
+        default=config_data[&#39;upgrade-target-version&#39;],
+        help=(&#39;test target harvester version&#39;)
+    )
+    parser.addoption(
+        &#39;--upgrade-iso-url&#39;,
+        action=&#39;store&#39;,
+        default=config_data[&#39;upgrade-iso-url&#39;],
+        help=(&#39;URL for specific iso&#39;)
+    )
+    parser.addoption(
+        &#39;--upgrade-iso-checksum&#39;,
+        action=&#39;store&#39;,
+        default=config_data[&#39;upgrade-iso-checksum&#39;],
+        help=(&#39;URL for specific iso checksum&#39;)
+    )
+    parser.addoption(
+        &#39;--upgrade-wait-timeout&#39;,
+        action=&#39;store&#39;,
+        default=config_data[&#39;upgrade-wait-timeout&#39;],
+        help=(&#39;Wait time for polling upgrade Harvester cluster completed status&#39;)
+    )
 
     # TODO(gyee): may need to add SSL options later
 
@@ -562,6 +598,42 @@ def pytest_collection_modifyitems(config, items):
         action=&#39;store&#39;,
         default=config_data[&#39;nfs-mount-dir&#39;],
         help=(&#39;mount directory for nfs share&#39;)
+    )
+    parser.addoption(
+        &#39;--upgrade-prepare-dependence&#39;,
+        action=&#39;store&#39;,
+        default=config_data[&#39;upgrade-prepare-dependence&#39;],
+        help=(&#39;If true to prepare dependence&#39;)
+    )
+    parser.addoption(
+        &#39;--upgrade-sc-replicas&#39;,
+        action=&#39;store&#39;,
+        default=config_data[&#39;upgrade-sc-replicas&#39;],
+        help=(&#39;default storage class replicas&#39;)
+    )
+    parser.addoption(
+        &#39;--upgrade-target-version&#39;,
+        action=&#39;store&#39;,
+        default=config_data[&#39;upgrade-target-version&#39;],
+        help=(&#39;test target harvester version&#39;)
+    )
+    parser.addoption(
+        &#39;--upgrade-iso-url&#39;,
+        action=&#39;store&#39;,
+        default=config_data[&#39;upgrade-iso-url&#39;],
+        help=(&#39;URL for specific iso&#39;)
+    )
+    parser.addoption(
+        &#39;--upgrade-iso-checksum&#39;,
+        action=&#39;store&#39;,
+        default=config_data[&#39;upgrade-iso-checksum&#39;],
+        help=(&#39;URL for specific iso checksum&#39;)
+    )
+    parser.addoption(
+        &#39;--upgrade-wait-timeout&#39;,
+        action=&#39;store&#39;,
+        default=config_data[&#39;upgrade-wait-timeout&#39;],
+        help=(&#39;Wait time for polling upgrade Harvester cluster completed status&#39;)
     )
 
     # TODO(gyee): may need to add SSL options later</code></pre>
