--- a/backend/integration/index.html
+++ b/backend/integration/index.html
@@ -50,6 +50,10 @@
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.integration.test_vm" href="test_vm.html">harvester_e2e_tests.integration.test_vm</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.integration.test_vm_functions" href="test_vm_functions.html">harvester_e2e_tests.integration.test_vm_functions</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -90,6 +94,7 @@
 <li><code><a title="harvester_e2e_tests.integration.test_rancher_integration" href="test_rancher_integration.html">harvester_e2e_tests.integration.test_rancher_integration</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_terraform" href="test_terraform.html">harvester_e2e_tests.integration.test_terraform</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_upgrade" href="test_upgrade.html">harvester_e2e_tests.integration.test_upgrade</a></code></li>
+<li><code><a title="harvester_e2e_tests.integration.test_vm" href="test_vm.html">harvester_e2e_tests.integration.test_vm</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_vm_functions" href="test_vm_functions.html">harvester_e2e_tests.integration.test_vm_functions</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_volumes" href="test_volumes.html">harvester_e2e_tests.integration.test_volumes</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.vmconsole" href="vmconsole.html">harvester_e2e_tests.integration.vmconsole</a></code></li>
