--- a/backend/apis/test_networks.html
+++ b/backend/apis/test_networks.html
@@ -99,18 +99,19 @@ class TestNetworksNegative:
 @pytest.mark.networks
 class TestNetworks:
 
-    @pytest.mark.dependency(name=&#34;create_network&#34;)
+    @pytest.mark.dependency(name=&#34;create_network_103&#34;)
     @pytest.mark.skip_version_after(&#34;v1.0.3&#34;)
     def test_create_103(self, api_client, unique_name):
         code, data = api_client.networks.create(unique_name, VLAN_ID)
         assert 201 == code, (code, data)
 
+    @pytest.mark.dependency(name=&#34;create_network&#34;)
     @pytest.mark.skip_version_before(&#34;v1.1.0&#34;)
     def test_create(self, api_client, unique_name):
         code, data = api_client.networks.create(unique_name, VLAN_ID, cluster_network=&#39;mgmt&#39;)
         assert 201 == code, (code, data)
 
-    @pytest.mark.dependency(depends=[&#34;create_network&#34;])
+    @pytest.mark.dependency(depends=[&#34;create_network_103&#34;, &#34;create_network&#34;], any=True)
     def test_get(self, api_client, unique_name):
         # Case 1: get all vlan networks
         code, data = api_client.networks.get()
@@ -124,7 +125,7 @@ class TestNetworks:
         assert 200 == code, (code, data)
         assert unique_name == data[&#39;metadata&#39;][&#39;name&#39;], (code, data)
 
-    @pytest.mark.dependency(depends=[&#34;create_network&#34;])
+    @pytest.mark.dependency(depends=[&#34;create_network_103&#34;, &#34;create_network&#34;], any=True)
     def test_delete(self, api_client, unique_name, wait_timeout):
         code, data = api_client.networks.delete(unique_name)
 
@@ -165,18 +166,19 @@ class TestNetworks:
 @pytest.mark.networks
 class TestNetworks:
 
-    @pytest.mark.dependency(name=&#34;create_network&#34;)
+    @pytest.mark.dependency(name=&#34;create_network_103&#34;)
     @pytest.mark.skip_version_after(&#34;v1.0.3&#34;)
     def test_create_103(self, api_client, unique_name):
         code, data = api_client.networks.create(unique_name, VLAN_ID)
         assert 201 == code, (code, data)
 
+    @pytest.mark.dependency(name=&#34;create_network&#34;)
     @pytest.mark.skip_version_before(&#34;v1.1.0&#34;)
     def test_create(self, api_client, unique_name):
         code, data = api_client.networks.create(unique_name, VLAN_ID, cluster_network=&#39;mgmt&#39;)
         assert 201 == code, (code, data)
 
-    @pytest.mark.dependency(depends=[&#34;create_network&#34;])
+    @pytest.mark.dependency(depends=[&#34;create_network_103&#34;, &#34;create_network&#34;], any=True)
     def test_get(self, api_client, unique_name):
         # Case 1: get all vlan networks
         code, data = api_client.networks.get()
@@ -190,7 +192,7 @@ class TestNetworks:
         assert 200 == code, (code, data)
         assert unique_name == data[&#39;metadata&#39;][&#39;name&#39;], (code, data)
 
-    @pytest.mark.dependency(depends=[&#34;create_network&#34;])
+    @pytest.mark.dependency(depends=[&#34;create_network_103&#34;, &#34;create_network&#34;], any=True)
     def test_delete(self, api_client, unique_name, wait_timeout):
         code, data = api_client.networks.delete(unique_name)
 
@@ -226,7 +228,8 @@ class TestNetworks:
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.skip_version_before(&#34;v1.1.0&#34;)
+<pre><code class="python">@pytest.mark.dependency(name=&#34;create_network&#34;)
+@pytest.mark.skip_version_before(&#34;v1.1.0&#34;)
 def test_create(self, api_client, unique_name):
     code, data = api_client.networks.create(unique_name, VLAN_ID, cluster_network=&#39;mgmt&#39;)
     assert 201 == code, (code, data)</code></pre>
@@ -241,7 +244,7 @@ def test_create(self, api_client, unique_name):
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.dependency(name=&#34;create_network&#34;)
+<pre><code class="python">@pytest.mark.dependency(name=&#34;create_network_103&#34;)
 @pytest.mark.skip_version_after(&#34;v1.0.3&#34;)
 def test_create_103(self, api_client, unique_name):
     code, data = api_client.networks.create(unique_name, VLAN_ID)
@@ -257,7 +260,7 @@ def test_create_103(self, api_client, unique_name):
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.dependency(depends=[&#34;create_network&#34;])
+<pre><code class="python">@pytest.mark.dependency(depends=[&#34;create_network_103&#34;, &#34;create_network&#34;], any=True)
 def test_delete(self, api_client, unique_name, wait_timeout):
     code, data = api_client.networks.delete(unique_name)
 
@@ -285,7 +288,7 @@ def test_delete(self, api_client, unique_name, wait_timeout):
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">@pytest.mark.dependency(depends=[&#34;create_network&#34;])
+<pre><code class="python">@pytest.mark.dependency(depends=[&#34;create_network_103&#34;, &#34;create_network&#34;], any=True)
 def test_get(self, api_client, unique_name):
     # Case 1: get all vlan networks
     code, data = api_client.networks.get()
