--- a/backend/integration/test_vm_functions.html
+++ b/backend/integration/test_vm_functions.html
@@ -111,7 +111,7 @@ def stopped_vm(api_client, ssh_keypair, wait_timeout, image, unique_vm_name):
     endtime = datetime.now() + timedelta(seconds=wait_timeout)
     while endtime &gt; datetime.now():
         code, data = api_client.vms.get(unique_vm_name)
-        if data.get(&#39;status&#39;):
+        if &#34;Stopped&#34; == data.get(&#39;status&#39;, {}).get(&#39;printableStatus&#39;):
             break
         sleep(1)
 
@@ -221,8 +221,8 @@ class TestVMOperations:
         endtime = datetime.now() + timedelta(seconds=wait_timeout)
         while endtime &gt; datetime.now():
             code, data = api_client.vms.get_status(unique_vm_name)
-            conds = data[&#39;status&#39;].get(&#39;conditions&#39;, [])
-            if 0 != len(conds) == len([c for c in conds if &#34;Paused&#34; not in c[&#39;type&#39;]]):
+            cond_types = set(c[&#39;type&#39;] for c in data[&#39;status&#39;].get(&#39;conditions&#39;, []))
+            if {&#34;AgentConnected&#34;} &amp; cond_types and not {&#34;Paused&#34;} &amp; cond_types:
                 break
             sleep(3)
         else:
@@ -323,7 +323,7 @@ class TestVMOperations:
         endtime = datetime.now() + timedelta(seconds=wait_timeout)
         while endtime &gt; datetime.now():
             code, data = api_client.vms.get_status(unique_vm_name)
-            if old_pods.difference(data[&#39;status&#39;].get(&#39;activePods&#39;, old_pods)):
+            if old_pods.difference(data[&#39;status&#39;].get(&#39;activePods&#39;, old_pods).items()):
                 break
             sleep(5)
         else:
@@ -1261,7 +1261,7 @@ def stopped_vm(api_client, ssh_keypair, wait_timeout, image, unique_vm_name):
     endtime = datetime.now() + timedelta(seconds=wait_timeout)
     while endtime &gt; datetime.now():
         code, data = api_client.vms.get(unique_vm_name)
-        if data.get(&#39;status&#39;):
+        if &#34;Stopped&#34; == data.get(&#39;status&#39;, {}).get(&#39;printableStatus&#39;):
             break
         sleep(1)
 
@@ -2264,8 +2264,8 @@ class TestVMOperations:
         endtime = datetime.now() + timedelta(seconds=wait_timeout)
         while endtime &gt; datetime.now():
             code, data = api_client.vms.get_status(unique_vm_name)
-            conds = data[&#39;status&#39;].get(&#39;conditions&#39;, [])
-            if 0 != len(conds) == len([c for c in conds if &#34;Paused&#34; not in c[&#39;type&#39;]]):
+            cond_types = set(c[&#39;type&#39;] for c in data[&#39;status&#39;].get(&#39;conditions&#39;, []))
+            if {&#34;AgentConnected&#34;} &amp; cond_types and not {&#34;Paused&#34;} &amp; cond_types:
                 break
             sleep(3)
         else:
@@ -2366,7 +2366,7 @@ class TestVMOperations:
         endtime = datetime.now() + timedelta(seconds=wait_timeout)
         while endtime &gt; datetime.now():
             code, data = api_client.vms.get_status(unique_vm_name)
-            if old_pods.difference(data[&#39;status&#39;].get(&#39;activePods&#39;, old_pods)):
+            if old_pods.difference(data[&#39;status&#39;].get(&#39;activePods&#39;, old_pods).items()):
                 break
             sleep(5)
         else:
@@ -2873,7 +2873,7 @@ Exepected Result:<ul>
     endtime = datetime.now() + timedelta(seconds=wait_timeout)
     while endtime &gt; datetime.now():
         code, data = api_client.vms.get_status(unique_vm_name)
-        if old_pods.difference(data[&#39;status&#39;].get(&#39;activePods&#39;, old_pods)):
+        if old_pods.difference(data[&#39;status&#39;].get(&#39;activePods&#39;, old_pods).items()):
             break
         sleep(5)
     else:
@@ -3098,8 +3098,8 @@ def test_unpause(self, api_client, unique_vm_name, wait_timeout):
     endtime = datetime.now() + timedelta(seconds=wait_timeout)
     while endtime &gt; datetime.now():
         code, data = api_client.vms.get_status(unique_vm_name)
-        conds = data[&#39;status&#39;].get(&#39;conditions&#39;, [])
-        if 0 != len(conds) == len([c for c in conds if &#34;Paused&#34; not in c[&#39;type&#39;]]):
+        cond_types = set(c[&#39;type&#39;] for c in data[&#39;status&#39;].get(&#39;conditions&#39;, []))
+        if {&#34;AgentConnected&#34;} &amp; cond_types and not {&#34;Paused&#34;} &amp; cond_types:
             break
         sleep(3)
     else:
