Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/integration/test_vm.html
+++ b/backend/integration/test_vm.html
@@ -127,6 +127,8 @@ def test_multiple_migrations(api_client, unique_name, focal_image, wait_timeout,
                     all_vm_ready = False
                     break
                 vmi_data.append(data)
+            else:
+                all_vm_ready = False
         if all_vm_ready:
             break
         sleep(5)
@@ -644,6 +646,8 @@ def test_multiple_migrations(api_client, unique_name, focal_image, wait_timeout,
                     all_vm_ready = False
                     break
                 vmi_data.append(data)
+            else:
+                all_vm_ready = False
         if all_vm_ready:
             break
         sleep(5)
