--- a/backend/integration/test_rancher_integration.html
+++ b/backend/integration/test_rancher_integration.html
@@ -357,7 +357,7 @@ class TestRKE:
             f&#34;SC Status({sc_code}): {sc_data}&#34;
         )
         # verify the storage class is marked `default`
-        assert &#39;true&#39; == sc_data[&#39;metadata&#39;][&#39;annotations&#39;][capi.pvcs.scs.DEFAULT_KEY], (
+        assert &#39;true&#39; == sc_data[&#39;metadata&#39;][&#39;annotations&#39;][capi.scs.DEFAULT_KEY], (
             f&#34;Storage Class is NOT the DEFAULT for created PVC\n&#34;
             f&#34;Requested Storage Class: {spec.storage_cls!r}&#34;
             f&#34;Created PVC Spec: {data}\n&#34;
@@ -901,7 +901,7 @@ class TestRKE:
             f&#34;SC Status({sc_code}): {sc_data}&#34;
         )
         # verify the storage class is marked `default`
-        assert &#39;true&#39; == sc_data[&#39;metadata&#39;][&#39;annotations&#39;][capi.pvcs.scs.DEFAULT_KEY], (
+        assert &#39;true&#39; == sc_data[&#39;metadata&#39;][&#39;annotations&#39;][capi.scs.DEFAULT_KEY], (
             f&#34;Storage Class is NOT the DEFAULT for created PVC\n&#34;
             f&#34;Requested Storage Class: {spec.storage_cls!r}&#34;
             f&#34;Created PVC Spec: {data}\n&#34;
@@ -1107,7 +1107,7 @@ def test_create_pvc(self, rancher_api_client, harvester_mgmt_cluster,
         f&#34;SC Status({sc_code}): {sc_data}&#34;
     )
     # verify the storage class is marked `default`
-    assert &#39;true&#39; == sc_data[&#39;metadata&#39;][&#39;annotations&#39;][capi.pvcs.scs.DEFAULT_KEY], (
+    assert &#39;true&#39; == sc_data[&#39;metadata&#39;][&#39;annotations&#39;][capi.scs.DEFAULT_KEY], (
         f&#34;Storage Class is NOT the DEFAULT for created PVC\n&#34;
         f&#34;Requested Storage Class: {spec.storage_cls!r}&#34;
         f&#34;Created PVC Spec: {data}\n&#34;
