Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/integration/index.html
+++ b/backend/integration/index.html
@@ -26,6 +26,10 @@
 <section>
 <h2 class="section-title" id="header-submodules">Sub-modules</h2>
 <dl>
+<dt><code class="name"><a title="harvester_e2e_tests.integration.test_0_storage_network" href="test_0_storage_network.html">harvester_e2e_tests.integration.test_0_storage_network</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.integration.test_backup_target" href="test_backup_target.html">harvester_e2e_tests.integration.test_backup_target</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -88,6 +92,7 @@
 </li>
 <li><h3><a href="#header-submodules">Sub-modules</a></h3>
 <ul>
+<li><code><a title="harvester_e2e_tests.integration.test_0_storage_network" href="test_0_storage_network.html">harvester_e2e_tests.integration.test_0_storage_network</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_backup_target" href="test_backup_target.html">harvester_e2e_tests.integration.test_backup_target</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_hosts" href="test_hosts.html">harvester_e2e_tests.integration.test_hosts</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_images" href="test_images.html">harvester_e2e_tests.integration.test_images</a></code></li>
