--- a/backend/integration/index.html
+++ b/backend/integration/index.html
@@ -30,6 +30,10 @@
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.integration.test_backup_restore" href="test_backup_restore.html">harvester_e2e_tests.integration.test_backup_restore</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.integration.test_hosts" href="test_hosts.html">harvester_e2e_tests.integration.test_hosts</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -89,6 +93,7 @@
 <li><h3><a href="#header-submodules">Sub-modules</a></h3>
 <ul>
 <li><code><a title="harvester_e2e_tests.integration.test_0_storage_network" href="test_0_storage_network.html">harvester_e2e_tests.integration.test_0_storage_network</a></code></li>
+<li><code><a title="harvester_e2e_tests.integration.test_backup_restore" href="test_backup_restore.html">harvester_e2e_tests.integration.test_backup_restore</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_hosts" href="test_hosts.html">harvester_e2e_tests.integration.test_hosts</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_images" href="test_images.html">harvester_e2e_tests.integration.test_images</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_rancher_integration" href="test_rancher_integration.html">harvester_e2e_tests.integration.test_rancher_integration</a></code></li>
