--- a/backend/integration/index.html
+++ b/backend/integration/index.html
@@ -19,7 +19,7 @@
 <main>
 <article id="content">
 <header>
-<h1 class="title">Namespace <code>harvester_e2e_tests.integration</code></h1>
+<h1 class="title">Module <code>harvester_e2e_tests.integration</code></h1>
 </header>
 <section id="section-intro">
 </section>
